Thu May 20 22:05:24 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/ace_tests.lst:
        * tests/run_test.lst:

          Added !ARCH to two tests that won't run properly in ARCH builds.

Thu May 20 21:50:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:

          With ARCH builds, if the executable ends in "perl", don't look for
          it in the ARCH directory.

Thu May 20 18:40:46 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          For "make install", if MPC_ROOT is not defined, guess ACE_ROOT/MPC.

Wed May 19 22:06:37 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Apply a "collapse slashes" function to exeout, libout, and dllout.
          This will transform paths with consecutive slashes into the same
          logical path with just a single slash.  The multiple slahses caused
          unexepected results with the "test" comparison in rules.local.GNU and
          also with bin/add_rel_link.sh.

Wed May 19 14:57:54 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          For Define_Custom commands, skip looking in the ARCH directory
          if the command already contains a quote character (because the
          command may actually be a script/executable followed by initial
          arguments).

Wed May 19 11:29:14 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Dev_Poll_Reactor.h:
        * ace/Dev_Poll_Reactor.cpp:
        * ace/Dev_Poll_Reactor.inl:
          This fixes bug 3848. Now ACE_Dev_Poll_Reactor::Handler_Repository
          will maintain its max and current size.
          ACE_Dev_Poll_Reactor::size() will return number of handlers
          registered in the reactor. Also this commit fixes code formatting
          and simplifies conditionally compiled code.
