@@ -493,6 +493,21 @@ include $(ACE_ROOT)/include/makeinclude/platform_linux.GNU
       NOTE! There really is not a # character before 'include' in the
       platform_macros.GNU file. # is a comment character.
   </li>
+  <li>If you wish to install ACE (using &quot;make install&quot;), set the
+      installation prefix in platform_macros.GNU.
+<blockquote><code>
+INSTALL_PREFIX = /usr/local
+</code></blockquote>
+      Headers will be installed to $INSTALL_PREFIX/include, executables to
+      $INSTALL_PREFIX/bin, documentation and build system files to
+      $INSTALL_PREFIX/share and libraries to $INSTALL_PREFIX/lib.  The library
+      directory can be customized by setting INSTALL_LIB (for example,
+      INSTALL_LIB=lib64).  With INSTALL_PREFIX set, RPATH will be enabled for
+      all executables and shared libraries.  To disable RPATH (for example,
+      if $INSTALL_PREFIX/$INSTALL_LIB is already a system-known location for
+      shared libraries such as those listed in /etc/ld.so.conf), set the make
+      macro install_rpath to 0 by adding install_rpath=0 to platform_macros.GNU.
+  </li>
   <li>Note that because ACE builds shared libraries, you'll need to set
       LD_LIBRARY_PATH (or equivalent for your platform) to the directory
       where binary version of the ACE library is built into. For example,
@@ -516,6 +531,9 @@ include $(ACE_ROOT)/include/makeinclude/platform_linux.GNU
       should build the <a href="http://www.cs.wustl.edu/%7Eschmidt/PDF/gperf.pdf">gperf</a>
       perfect hash function generator application in
       <code>$ACE_ROOT/apps/gperf</code>.
+  </li>
+  <li>If you've set the INSTALL_PREFIX before building, now run
+<blockquote><code>% make install</code></blockquote>
   </li>
   <li>If you need to regenerate the <code>ace/Svc_Conf_y.cpp</code> file,
       you'll need to
